--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL=https://mark8admin-backend-a7bc7a7e9469.herokuapp.com/
+# VITE_API_BASE_URL=https://mark8admin-backend-a7bc7a7e9469.herokuapp.com/
+VITE_API_BASE_URL=http://localhost:3000/
